# indy-besu

./: .gitignore  .lycheeignore
.github/workflows/: indy-besu.yml  lint_test.yml  release.yml
docs/design/: upgradability.md
examples/migration/: README.md
network/config/besu/: genesis.json
smart_contracts/: README.md  hardhat.config.ts  package.json
smart_contracts/contracts-ts/: RevocationRegistry.ts
smart_contracts/contracts/anoncreds/: RevocationRegistry.sol  RevocationRegistryInterface.sol  RevocationRegistryTypes.sol
smart_contracts/demos/: flow-with-did-ethr.ts  flow.ts
smart_contracts/test/anoncreds/: RevocationRegistry.spec.ts
smart_contracts/utils/: entity-factories.ts
vdr/: Cargo.toml
vdr/src/: test.rs
vdr/src/client/: client.rs
vdr/src/client/implementation/web3/: client.rs
vdr/src/contracts/anoncreds/: revocation_registry.rs
vdr/src/contracts/anoncreds/types/: revocation_registry_definition.rs  revocation_registry_definition_id.rs  revocation_registry_delta.rs  revocation_registry_entry.rs  revocation_registry_events.rs
vdr/src/types/: contract.rs
vdr/uniffi/: Cargo.toml  build-swift-framework.sh  uniffi.toml
vdr/uniffi/src/: lib.rs
vdr/uniffi/src/ffi/: endorsing_data.rs  error.rs  types.rs
vdr/uniffi/src/ffi/contracts/: credential_definition_registry.rs  did_indy_registry.rs  did_resolver.rs  mod.rs  revocation_registry.rs  schema_registry.rs  validator_control.rs
vdr/wasm/: Cargo.toml
vdr/wasm/src/contracts/: credential_definition_registry.rs  revocation_registry.rs
vdr/wrappers/python/demo/: test.py
vdr/wrappers/python/indy_besu_vdr/: __init__.py  indy_besu_vdr.py  pyproject.toml  setup.cfg  setup.py  types.py
(+1 files in other folders)
