[package]
name = "indy-besu-vdr-uniffi"
description = "Uni-FFI bindings for Indy 2.0 VDR"
version = "0.1.0"
authors = [
    "Artem Ivanov <artem.ivanov@dsr-corporation.com>",
]
edition = "2021"
license = "Apache-2.0"
readme = "./README.md"

[lib]
name = "indy_besu_vdr_uniffi"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
#path = "uniffi-bindgen.rs"
path = "src/bin.rs"

[features]
default = []

[dependencies]
indy-besu-vdr = { path = ".." }
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
thiserror = "1.0.49"
#uniffi = { version = "0.26.1", features = ["tokio", "cli"] }
#uniffi = { version = "0.29.4", features = [ "cli" ] }
#uniffi_bindgen = { version = "0.26.1", optional = true }
uniffi_bindgen = { version = "0.29.0", optional = true }
uniffi_macros = "0.29.0"
# Habilite o runtime que você declarou no atributo #[uniffi::export(async_runtime = "tokio")]
uniffi = { version = "0.29.5", features = ["tokio", "cli"] }
 
# Runtime propriamente dito
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 
# Só mantenha se o erro "async_compat" persistir (alguns caminhos de geração usam isso)
async-compat = "0.2"
 

[build-dependencies]
#uniffi = { version = "0.26.1", features = [ "build"] }
uniffi = { version = "0.29.5", features = [ "build" ] }

[dev-dependencies]
#uniffi = { version = "0.26.1", features = ["tokio", "cli"] }
uniffi = { version = "0.29.5", features = ["tokio", "cli"] }
#uniffi = { version = "0.29.4" }

[patch.crates-io]
web3 = { git = 'https://github.com/DSRCorporation/rust-web3.git'}
